Add React client with Vite and update project setup
Introduced a new React 18 frontend using Vite, including initial components, context, hooks, and configuration for Tailwind CSS and ESLint. Updated README with new scripts, project structure, and frontend details. Updated dependencies in package.json and bun.lock to support the new client. Server entry updated for integration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,11 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": ".",
+    "jsx": "react-jsx",
     "paths": {
       "@shared/*": ["src/shared/*"],
-      "@server/*": ["src/server/*"]
+      "@server/*": ["src/server/*"],
+      "@client/*": ["src/client/*"]
     },
     "types": ["bun-types"]
   },
