--- a/package.json
+++ b/package.json
@@ -4,24 +4,35 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --watch src/server/index.ts",
+    "dev:client": "vite",
+    "dev:all": "concurrently \"bun run dev\" \"bun run dev:client\"",
     "build": "bun build src/server/index.ts --outdir dist --target bun",
+    "build:client": "vite build",
     "start": "bun run dist/index.js",
     "test": "bun test",
     "lint": "eslint src --ext .ts,.tsx",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "^1.1.14",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "eslint": "^9.17.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3"
   }
 }
