--- a/fly.toml
+++ b/fly.toml
@@ -1,24 +1,23 @@
-app = "word-guess-who"
-primary_region = "iad"
+# fly.toml app configuration file generated for word-guess-who on 2026-02-04T04:24:10Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'word-guess-who'
+primary_region = 'iad'
 
 [build]
 
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-
-[env]
-  NODE_ENV = "production"
-  DATA_PATH = "/app/data"
-
-[mounts]
-  source = "data"
-  destination = "/app/data"
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 512
+  memory_mb = 1024
